inclusão da pasta gráficos com o arquivo informacoesGlobais.js

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <footer>
         <p>Desenvolvido por Emanuel</p>
     </footer>
+    <script type="module" src="graficos/informacoesGlobais.js"></script>
 </body>
 
 </html>
