--- a/index.html
+++ b/index.html
@@ -17,14 +17,13 @@
     </header>
     <main class="graficos-section">
         <section id="graficos-container" class="graficos-container">
-            <p class="graficos-container__texto">
-                <!-- Insira seu texto aqui -->
-                Você sabia que o mundo tem 7.888.000.000 de pessoas? E que aproximadamente 6.000.000.000 tem acesso à
+
+                <!-- <p class="graficos-container__texto">Você sabia que o mundo tem 7.888.000.000 de pessoas? E que aproximadamente 6.000.000.000 tem acesso à
                 educação e passam em média 4 horas estudando.
                 Enquanto na educação superior temos 1.500.000.000 bilhões de pessoas que possuem esta formação.
                 Isso significa que aproximadamente 76,06% de pessoas com acesso a educação, e destas, apenas 19,03% tem
-                formação superior.
-            </p>
+                formação superior.</p> -->
+
         </section>
     </main>
     <footer>
