--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Relatório de Redes Sociais</title>
+    <script src="https://cdn.plot.ly/plotly-2.27.0.min.js" charset="utf-8"></script>
 </head>
 
 <body>
@@ -30,7 +31,9 @@
     <footer>
         <p>Desenvolvido por Emanuel</p>
     </footer>
+    <script type="module" src="graficos/common.js"></script>
     <script type="module" src="graficos/informacoesGlobais.js"></script>
+    <script type="module" src="graficos/quantidadeUsuarios.js"></script>
 </body>
 
 </html>
